--- a/BuyCodeBackend.Host/BuyCodeBackend.Host.csproj
+++ b/BuyCodeBackend.Host/BuyCodeBackend.Host.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <RootNamespace>BuyCodeBackend.Auth</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,10 +23,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Api\" />
-      <Folder Include="Application\" />
-      <Folder Include="Domain\Interfaces\" />
-      <Folder Include="Infrastructure\Repositories\" />
+      <ProjectReference Include="..\BuyCode.Modules.Auth\BuyCode.Modules.Auth.csproj" />
+      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+      <ProjectReference Include="..\Kernel\Kernel.csproj" />
     </ItemGroup>
 
 </Project>
