kafka consumer, namespaces changed

--- a/BuyCodeBackend.Host/appsettings.json
+++ b/BuyCodeBackend.Host/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDbConnectionString": "Host=localhost;Port=5432;Database=auth;Username=postgres;Password=Kondrashin_2005"
+    "AuthDbConnectionString": "Host=localhost;Port=5432;Database=auth;Username=postgres;Password=Kondrashin2005"
   }
 }
